v1.0实现
